--- a/paid-subscribe/index.html
+++ b/paid-subscribe/index.html
@@ -261,7 +261,7 @@
                             <hr />
                                                         <div class="panel panel-default">
                                 <div class="panel-heading">
-                                    <a href="javascript:;" class="js_to" data-url="https://a.xcvpn.me/#/register?code=" data-type="Xingchen" data-code="biwOBZBq" target="_blank"><b>星辰机场</b></a>
+                                    <a href="javascript:;" class="js_to" data-url="https://c.xcvpn.me/?path=" data-type="Xingchen" data-code="register&code" target="_blank"><b>星辰机场</b></a>
                                 </div>
                                 <div class="panel-body">
                                     <p>【包年送2个月】</p><p>1、购买入门版年付套餐额外送2个月，共14个月，只要99元！！！</p><p>2、购买“至尊天皇”年付套餐，额外送2个月，只要299元！！！</p><p>3、购买其他包月类套餐中的年付，同样送2个月！！！</p><p>错过要再等一年！！</p>
@@ -331,7 +331,7 @@
                                                                             </dl>
                                 </div>
                                 <div class="panel-footer">
-                                    <a href="javascript:;" class="js_to" data-url="https://a.xcvpn.me/#/register?code=" data-type="Xingchen" data-code="biwOBZBq" target="_blank">点击查看</a>
+                                    <a href="javascript:;" class="js_to" data-url="https://c.xcvpn.me/?path=" data-type="Xingchen" data-code="register&code" target="_blank">点击查看</a>
                                 </div>
                             </div>
                             <hr />
@@ -566,16 +566,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-5-28-free-subscribe-node.htm" title="免费Clash SSR - 5月28日22.9M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享">免费Clash SSR - 5月28日22.9M/S|免费Shadowrocket/SSR/Clash/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-24-free-subscribe-node.htm" title="免费Clash SSR - 5月24日19.9M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享">免费Clash SSR - 5月24日19.9M/S|免费V2ray/Clash/Shadowrocket/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-30-free-v2ray-subscribe.htm" title="免费Clash SSR - 5月30日19.2M/S|免费V2ray/Shadowrocket/Clash/SSR节点订阅分享">免费Clash SSR - 5月30日19.2M/S|免费V2ray/Shadowrocket/Clash/SSR节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-5-node-share-links.htm" title="免费Clash SSR - 6月5日20.2M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享">免费Clash SSR - 6月5日20.2M/S|免费Clash/Shadowrocket/SSR/V2ray节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-2-free-v2ray-subscribe.htm" title="免费Clash SSR - 6月2日20.1M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享">免费Clash SSR - 6月2日20.1M/S|免费SSR/V2ray/Clash/Shadowrocket节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-25-free-v2ray.htm" title="免费Clash SSR - 5月25日22.2M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 5月25日22.2M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-6-8-node-share.htm" title="免费Clash SSR - 6月8日19.4M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 6月8日19.4M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-6-free-node-subscribe.htm" title="免费Clash SSR - 6月6日20M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享">免费Clash SSR - 6月6日20M/S|免费Shadowrocket/V2ray/SSR/Clash节点订阅分享</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-5-31-free-node-subscribe-links.htm" title="免费Clash SSR - 5月31日20.7M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 5月31日20.7M/S|免费Clash/SSR/V2ray/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-14-node-share.htm" title="免费Clash SSR - 6月14日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月14日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-4-free-high-speed-nodes.htm" title="免费Clash SSR - 6月4日22.3M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享">免费Clash SSR - 6月4日22.3M/S|免费Clash/V2ray/SSR/Shadowrocket节点订阅分享</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-6-7-free-high-speed-nodes.htm" title="免费Clash SSR - 6月7日22M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月7日22M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-8-node-share.htm" title="免费Clash SSR - 6月8日19.4M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 6月8日19.4M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-19-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 6月19日22.8M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 6月19日22.8M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-17-node-share.htm" title="免费Clash SSR - 6月17日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享">免费Clash SSR - 6月17日19.1M/S|免费V2ray/SSR/Shadowrocket/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-16-clash-v2ray-ss-ssr.htm" title="免费Clash SSR - 6月16日21.7M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享">免费Clash SSR - 6月16日21.7M/S|免费SSR/Clash/V2ray/Shadowrocket节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-5-25-free-v2ray.htm" title="免费Clash SSR - 5月25日22.2M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享">免费Clash SSR - 5月25日22.2M/S|免费SSR/Shadowrocket/V2ray/Clash节点订阅分享</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-6-10-free-high-speed-nodes.htm" title="免费Clash SSR - 6月10日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享">免费Clash SSR - 6月10日22.6M/S|免费Shadowrocket/V2ray/Clash/SSR节点订阅分享</a></li>
                     </ul>
     </div>
 </div>
@@ -587,7 +587,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">14</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
+                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2025-06/" title="2025-06 归档">2025-06</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">11</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
